{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 57,
  "lineage": "9e47c167-1663-3d46-9f7c-49d3ab2c60ac",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/publicIPAddresses/Publick_IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.101.87.252",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publick_IP",
            "resource_group_name": "Production",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/FronEndPublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess1",
                  "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess2"
                ],
                "load_balancer_rules": [
                  "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/lb_rule2"
                ],
                "name": "FronEndPublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/publicIPAddresses/Publick_IP"
              }
            ],
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "location": "westeurope",
            "name": "LoadBalancer",
            "resource_group_name": "Production",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC/ipConfigurations/internal",
              "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC/ipConfigurations/internal"
            ],
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "load_balancing_rules": [
              "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/lb_rule2"
            ],
            "loadbalancer_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "BackEndPool",
            "resource_group_name": "Production"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "nat_rule_forvm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC/ipConfigurations/internal",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/FronEndPublicIPAddress",
            "frontend_ip_configuration_name": "FronEndPublicIPAddress",
            "frontend_port": 10000,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "GrantAccess1",
            "protocol": "Tcp",
            "resource_group_name": "Production"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_lb.LoadBalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "nat_rule_forvm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configuration_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC/ipConfigurations/internal",
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/FronEndPublicIPAddress",
            "frontend_ip_configuration_name": "FronEndPublicIPAddress",
            "frontend_port": 10001,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess2",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "GrantAccess2",
            "protocol": "Tcp",
            "resource_group_name": "Production"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/health-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "health-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "Production"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/FronEndPublicIPAddress",
            "frontend_ip_configuration_name": "FronEndPublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/lb_rule2",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "lb_rule2",
            "protocol": "Tcp",
            "resource_group_name": "Production"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC/ipConfigurations/internal|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_linux_virtual_machine.AppVM",
            "module.VM.azurerm_network_interface.NIC_VM",
            "azurerm_availability_set.availability_set",
            "azurerm_lb.LoadBalancer"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC/ipConfigurations/internal|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC"
          },
          "dependencies": [
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_linux_virtual_machine.AppVM",
            "module.VM.azurerm_network_interface.NIC_VM",
            "azurerm_availability_set.availability_set",
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnetVM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "nat_rule_forvm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC/ipConfigurations/internal|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess1",
            "ip_configuration_name": "internal",
            "nat_rule_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess1",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC"
          },
          "dependencies": [
            "azurerm_lb.LoadBalancer",
            "azurerm_lb_nat_rule.nat_rule_forvm1",
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_network_interface.NIC_VM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "nat_rule_forvm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC/ipConfigurations/internal|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess2",
            "ip_configuration_name": "internal",
            "nat_rule_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/loadBalancers/LoadBalancer/inboundNatRules/GrantAccess2",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC"
          },
          "dependencies": [
            "azurerm_lb_nat_rule.nat_rule_forvm2",
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_network_interface.NIC_VM",
            "azurerm_lb.LoadBalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "NIC1_to_NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC",
            "network_security_group_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM"
          },
          "dependencies": [
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_linux_virtual_machine.AppVM",
            "module.VM.azurerm_network_interface.NIC_VM",
            "azurerm_availability_set.availability_set",
            "azurerm_network_security_group.NSG_VM"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC|/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM",
            "network_interface_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC",
            "network_security_group_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM"
          },
          "dependencies": [
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN",
            "module.VM.azurerm_linux_virtual_machine.AppVM",
            "module.VM.azurerm_network_interface.NIC_VM",
            "azurerm_availability_set.availability_set",
            "azurerm_network_security_group.NSG_VM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM",
            "location": "westeurope",
            "name": "NSG_VM",
            "resource_group_name": "Production",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port_22",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port_5432",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port_8080",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM/securityRules/port_8080",
            "name": "port_8080",
            "network_security_group_name": "NSG_VM",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Production",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG_VM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_VM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM/securityRules/port_22",
            "name": "port_22",
            "network_security_group_name": "NSG_VM",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "Production",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG_VM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG_VM2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "5432",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM/securityRules/port_5432",
            "name": "port_5432",
            "network_security_group_name": "NSG_VM",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "Production",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG_VM"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/publicIPAddresses/Publick_IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.101.87.252",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Publick_IP",
            "resource_group_name": "Production",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetVM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "12.0.1.0/24",
            "address_prefixes": [
              "12.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM",
            "name": "SubNet_VM",
            "resource_group_name": "Production",
            "virtual_network_name": "VirtualNetwork"
          },
          "dependencies": [
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetVM_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM",
            "network_security_group_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM",
            "subnet_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG_VM",
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "12.0.0.0/20"
            ],
            "guid": "481f2934-0204-4235-9a11-f49e26a3aff4",
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork",
            "location": "westeurope",
            "name": "VirtualNetwork",
            "resource_group_name": "Production",
            "subnet": [
              {
                "address_prefix": "12.0.1.0/24",
                "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM",
                "name": "SubNet_VM",
                "security_group": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkSecurityGroups/NSG_VM"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "module": "module.VM[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd1-NIC",
            "internal_domain_name_suffix": "gqur4saeai0ufgqr4spcni3p4e.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "12.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-5A-87",
            "name": "VMProd1-NIC",
            "private_ip_address": "12.0.1.4",
            "private_ip_addresses": [
              "12.0.1.4"
            ],
            "resource_group_name": "Production",
            "virtual_machine_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Compute/virtualMachines/VMProd1"
          },
          "dependencies": [
            "azurerm_virtual_network.VN",
            "azurerm_subnet.subnetVM"
          ]
        }
      ]
    },
    {
      "module": "module.VM[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC_VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/networkInterfaces/VMProd2-NIC",
            "internal_domain_name_suffix": "gqur4saeai0ufgqr4spcni3p4e.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "12.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/SubNet_VM"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-48-57-03",
            "name": "VMProd2-NIC",
            "private_ip_address": "12.0.1.5",
            "private_ip_addresses": [
              "12.0.1.5"
            ],
            "resource_group_name": "Production",
            "virtual_machine_id": "/subscriptions/cd50a6c3-5742-4dd0-bb4e-b12c21ad6eeb/resourceGroups/Production/providers/Microsoft.Compute/virtualMachines/VMProd2"
          },
          "dependencies": [
            "azurerm_subnet.subnetVM",
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    }
  ]
}